[package]
name = "google_images_scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["gzip", "cookies"] }
tokio   = { version = "1", features = ["full"] }
regex   = "1.10"
url     = "2.5"
rand    = "0.9.1"
urlencoding = "2.1"
serde   = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono  = { version = "0.4", features = ["serde"] }
